# Car-Rent

./: .gitignore  .replit  README_AUTO_DOCUMENTS_FIX.md  add_bank_transfer_link.py  add_bank_transfer_url.py  add_bank_transfer_view.py  add_critical_inspection_items.py  add_direct_bank_transfer_button.py  add_direct_bank_transfer_page.py  add_expiry_to_all_reservations.py  add_important_inspection_categories.py  add_more_critical_items.py  add_payment_links.py  add_regular_admin_logs_directly.py  admin.py  app.py  apply_new_reservations_template.py  apply_payment_details_ultra_pro.py  apply_payment_ultra_pro.py  auto_clean_cache.py  car_detail_animation.css  change_currency_to_yemeni_rial.py  check_admin_permission_table.py  check_all_documents.py  check_archive_view.py  check_cart.py  check_document_fields.py  check_folder.py  check_folder_92.py  check_folders.py  check_images.py  check_reservations.py  check_users.py  clean_auto_documents.py  clean_cache.py  clean_cache.sh  clean_empty_documents.py  clean_project.py  clean_project_safe.py  clean_pycache.py  (+204 more)
attached_assets/: Pasted---1745196909540.txt  Pasted---1746032195300.txt  Pasted---1747281468432.txt  Pasted--1--1747264259827.txt  Pasted--1061265-DEBUG-ID-14-folder-id-None-image-png-14766-1745938713005.txt  Pasted--DOCUMENT-INIT-DOCUMENT-TRACE-1-home-runner-workspace-pythonlibs-li-1745868922348.txt  Pasted--DOCUMENT-INIT-base-py-from-db-DOCUMENT-INIT--1745941247314.txt  Pasted--DOCUMENT-TRACE-1-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-django-db-models-1745625781304.txt  (+83 more)
locale/: messages.pot
(+579 files in other folders)
